--- a/test.ipynb
+++ b/test.ipynb
@@ -2,45 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<span class=\"dark\">21.12.2022</span>\n",
-      "<span class=\"dark\">07.01.2023</span>\n",
-      "<span class=\"dark\">Christmas holidays</span>\n",
-      "<span class=\"dark\">06.04.2023</span>\n",
-      "<span class=\"dark\">15.04.2023</span>\n",
-      "<span class=\"dark\">Easter holidays</span>\n",
-      "<span class=\"dark\">30.05.2023</span>\n",
-      "<span class=\"dark\">09.06.2023</span>\n",
-      "<span class=\"dark\">Whitsun Holiday</span>\n",
-      "<span class=\"dark\">27.07.2023</span>\n",
-      "<span class=\"dark\">09.09.2023</span>\n",
-      "<span class=\"dark\">Summer holidays</span>\n",
-      "<span class=\"dark\">30.10.2023</span>\n",
-      "<span class=\"dark\">03.11.2023</span>\n",
-      "<span class=\"dark\">Autumn holidays</span>\n",
-      "<span class=\"dark\">23.12.2023</span>\n",
-      "<span class=\"dark\">05.01.2024</span>\n",
-      "<span class=\"dark\">Christmas holidays</span>\n"
+      "21.12.2022 to 07.01.2023\n",
+      "2022-12-21\n",
+      "2022-12-22\n",
+      "2022-12-23\n",
+      "2022-12-24\n",
+      "2022-12-25\n",
+      "2022-12-26\n",
+      "2022-12-27\n",
+      "2022-12-28\n",
+      "2022-12-29\n",
+      "2022-12-30\n",
+      "2022-12-31\n",
+      "2023-01-01\n",
+      "2023-01-02\n",
+      "2023-01-03\n",
+      "2023-01-04\n",
+      "2023-01-05\n",
+      "2023-01-06\n",
+      "2023-01-07\n",
+      "------------------\n",
+      "06.04.2023 to 15.04.2023\n",
+      "2023-04-06\n",
+      "2023-04-07\n",
+      "2023-04-08\n",
+      "2023-04-09\n",
+      "2023-04-10\n",
+      "2023-04-11\n",
+      "2023-04-12\n",
+      "2023-04-13\n",
+      "2023-04-14\n",
+      "2023-04-15\n",
+      "------------------\n",
+      "30.05.2023 to 09.06.2023\n",
+      "2023-05-30\n",
+      "2023-05-31\n",
+      "2023-06-01\n",
+      "2023-06-02\n",
+      "2023-06-03\n",
+      "2023-06-04\n",
+      "2023-06-05\n",
+      "2023-06-06\n",
+      "2023-06-07\n",
+      "2023-06-08\n",
+      "2023-06-09\n",
+      "------------------\n",
+      "27.07.2023 to 09.09.2023\n",
+      "2023-07-27\n",
+      "2023-07-28\n",
+      "2023-07-29\n",
+      "2023-07-30\n",
+      "2023-07-31\n",
+      "2023-08-01\n",
+      "2023-08-02\n",
+      "2023-08-03\n",
+      "2023-08-04\n",
+      "2023-08-05\n",
+      "2023-08-06\n",
+      "2023-08-07\n",
+      "2023-08-08\n",
+      "2023-08-09\n",
+      "2023-08-10\n",
+      "2023-08-11\n",
+      "2023-08-12\n",
+      "2023-08-13\n",
+      "2023-08-14\n",
+      "2023-08-15\n",
+      "2023-08-16\n",
+      "2023-08-17\n",
+      "2023-08-18\n",
+      "2023-08-19\n",
+      "2023-08-20\n",
+      "2023-08-21\n",
+      "2023-08-22\n",
+      "2023-08-23\n",
+      "2023-08-24\n",
+      "2023-08-25\n",
+      "2023-08-26\n",
+      "2023-08-27\n",
+      "2023-08-28\n",
+      "2023-08-29\n",
+      "2023-08-30\n",
+      "2023-08-31\n",
+      "2023-09-01\n",
+      "2023-09-02\n",
+      "2023-09-03\n",
+      "2023-09-04\n",
+      "2023-09-05\n",
+      "2023-09-06\n",
+      "2023-09-07\n",
+      "2023-09-08\n",
+      "2023-09-09\n",
+      "------------------\n",
+      "30.10.2023 to 03.11.2023\n",
+      "2023-10-30\n",
+      "2023-10-31\n",
+      "2023-11-01\n",
+      "2023-11-02\n",
+      "2023-11-03\n",
+      "------------------\n",
+      "23.12.2023 to 05.01.2024\n",
+      "2023-12-23\n",
+      "2023-12-24\n",
+      "2023-12-25\n",
+      "2023-12-26\n",
+      "2023-12-27\n",
+      "2023-12-28\n",
+      "2023-12-29\n",
+      "2023-12-30\n",
+      "2023-12-31\n",
+      "2024-01-01\n",
+      "2024-01-02\n",
+      "2024-01-03\n",
+      "2024-01-04\n",
+      "2024-01-05\n",
+      "------------------\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "from datetime import date, timedelta, datetime\n",
+    "\n",
     "\n",
     "url = 'https://www.feiertagskalender.ch/ferien.php?geo=3060&jahr=2023&klasse=0&hl=en'\n",
     "response = requests.get(url)\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
     "body = soup.find('table', {\"id\": \"school_vacancies\"} )\n",
-    "rows = body.find_all('span')\n",
-    "for r in rows:\n",
-    "    print(r)"
+    "rows = body.find_all('tr')\n",
+    "for row in rows:\n",
+    "    cell = row.find_all('td')\n",
+    "    if(cell):\n",
+    "        print(cell[0].text, cell[2].text, cell[3].text)\n",
+    "        start_date = datetime.strptime(cell[0].text, '%d.%m.%Y').date()\n",
+    "        end_date = datetime.strptime(cell[3].text, '%d.%m.%Y').date()\n",
+    "        delta = end_date - start_date\n",
+    "        for i in range(delta.days + 1):\n",
+    "            day = start_date + timedelta(days=i)\n",
+    "            print(day)\n",
+    "        print('------------------')\n"
    ]
   },
   {
