--- a/test.ipynb
+++ b/test.ipynb
@@ -2,135 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.12.2022 to 07.01.2023\n",
-      "2022-12-21\n",
-      "2022-12-22\n",
-      "2022-12-23\n",
-      "2022-12-24\n",
-      "2022-12-25\n",
-      "2022-12-26\n",
-      "2022-12-27\n",
-      "2022-12-28\n",
-      "2022-12-29\n",
-      "2022-12-30\n",
-      "2022-12-31\n",
-      "2023-01-01\n",
-      "2023-01-02\n",
-      "2023-01-03\n",
-      "2023-01-04\n",
-      "2023-01-05\n",
-      "2023-01-06\n",
-      "2023-01-07\n",
-      "------------------\n",
-      "06.04.2023 to 15.04.2023\n",
-      "2023-04-06\n",
-      "2023-04-07\n",
-      "2023-04-08\n",
-      "2023-04-09\n",
-      "2023-04-10\n",
-      "2023-04-11\n",
-      "2023-04-12\n",
-      "2023-04-13\n",
-      "2023-04-14\n",
-      "2023-04-15\n",
-      "------------------\n",
-      "30.05.2023 to 09.06.2023\n",
-      "2023-05-30\n",
-      "2023-05-31\n",
-      "2023-06-01\n",
-      "2023-06-02\n",
-      "2023-06-03\n",
-      "2023-06-04\n",
-      "2023-06-05\n",
-      "2023-06-06\n",
-      "2023-06-07\n",
-      "2023-06-08\n",
-      "2023-06-09\n",
-      "------------------\n",
-      "27.07.2023 to 09.09.2023\n",
-      "2023-07-27\n",
-      "2023-07-28\n",
-      "2023-07-29\n",
-      "2023-07-30\n",
-      "2023-07-31\n",
-      "2023-08-01\n",
-      "2023-08-02\n",
-      "2023-08-03\n",
-      "2023-08-04\n",
-      "2023-08-05\n",
-      "2023-08-06\n",
-      "2023-08-07\n",
-      "2023-08-08\n",
-      "2023-08-09\n",
-      "2023-08-10\n",
-      "2023-08-11\n",
-      "2023-08-12\n",
-      "2023-08-13\n",
-      "2023-08-14\n",
-      "2023-08-15\n",
-      "2023-08-16\n",
-      "2023-08-17\n",
-      "2023-08-18\n",
-      "2023-08-19\n",
-      "2023-08-20\n",
-      "2023-08-21\n",
-      "2023-08-22\n",
-      "2023-08-23\n",
-      "2023-08-24\n",
-      "2023-08-25\n",
-      "2023-08-26\n",
-      "2023-08-27\n",
-      "2023-08-28\n",
-      "2023-08-29\n",
-      "2023-08-30\n",
-      "2023-08-31\n",
-      "2023-09-01\n",
-      "2023-09-02\n",
-      "2023-09-03\n",
-      "2023-09-04\n",
-      "2023-09-05\n",
-      "2023-09-06\n",
-      "2023-09-07\n",
-      "2023-09-08\n",
-      "2023-09-09\n",
-      "------------------\n",
-      "30.10.2023 to 03.11.2023\n",
-      "2023-10-30\n",
-      "2023-10-31\n",
-      "2023-11-01\n",
-      "2023-11-02\n",
-      "2023-11-03\n",
-      "------------------\n",
-      "23.12.2023 to 05.01.2024\n",
-      "2023-12-23\n",
-      "2023-12-24\n",
-      "2023-12-25\n",
-      "2023-12-26\n",
-      "2023-12-27\n",
-      "2023-12-28\n",
-      "2023-12-29\n",
-      "2023-12-30\n",
-      "2023-12-31\n",
-      "2024-01-01\n",
-      "2024-01-02\n",
-      "2024-01-03\n",
-      "2024-01-04\n",
-      "2024-01-05\n",
-      "------------------\n"
+      "('DE-BW', 3060, datetime.date(2022, 12, 21))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 22))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 23))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 24))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 25))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 26))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 27))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 28))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 29))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 30))\n",
+      "('DE-BW', 3060, datetime.date(2022, 12, 31))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 1))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 2))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 3))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 4))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 5))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 6))\n",
+      "('DE-BW', 3060, datetime.date(2023, 1, 7))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 6))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 7))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 8))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 9))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 10))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 11))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 12))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 13))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 14))\n",
+      "('DE-BW', 3060, datetime.date(2023, 4, 15))\n",
+      "('DE-BW', 3060, datetime.date(2023, 5, 30))\n",
+      "('DE-BW', 3060, datetime.date(2023, 5, 31))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 1))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 2))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 3))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 4))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 5))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 6))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 7))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 8))\n",
+      "('DE-BW', 3060, datetime.date(2023, 6, 9))\n",
+      "('DE-BW', 3060, datetime.date(2023, 7, 27))\n",
+      "('DE-BW', 3060, datetime.date(2023, 7, 28))\n",
+      "('DE-BW', 3060, datetime.date(2023, 7, 29))\n",
+      "('DE-BW', 3060, datetime.date(2023, 7, 30))\n",
+      "('DE-BW', 3060, datetime.date(2023, 7, 31))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 1))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 2))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 3))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 4))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 5))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 6))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 7))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 8))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 9))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 10))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 11))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 12))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 13))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 14))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 15))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 16))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 17))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 18))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 19))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 20))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 21))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 22))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 23))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 24))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 25))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 26))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 27))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 28))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 29))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 30))\n",
+      "('DE-BW', 3060, datetime.date(2023, 8, 31))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 1))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 2))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 3))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 4))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 5))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 6))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 7))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 8))\n",
+      "('DE-BW', 3060, datetime.date(2023, 9, 9))\n",
+      "('DE-BW', 3060, datetime.date(2023, 10, 30))\n",
+      "('DE-BW', 3060, datetime.date(2023, 10, 31))\n",
+      "('DE-BW', 3060, datetime.date(2023, 11, 1))\n",
+      "('DE-BW', 3060, datetime.date(2023, 11, 2))\n",
+      "('DE-BW', 3060, datetime.date(2023, 11, 3))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 23))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 24))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 25))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 26))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 27))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 28))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 29))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 30))\n",
+      "('DE-BW', 3060, datetime.date(2023, 12, 31))\n",
+      "('DE-BW', 3060, datetime.date(2024, 1, 1))\n",
+      "('DE-BW', 3060, datetime.date(2024, 1, 2))\n",
+      "('DE-BW', 3060, datetime.date(2024, 1, 3))\n",
+      "('DE-BW', 3060, datetime.date(2024, 1, 4))\n",
+      "('DE-BW', 3060, datetime.date(2024, 1, 5))\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
+    "import csv\n",
+    "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "from datetime import date, timedelta, datetime\n",
+    "\n",
+    "stateISO= \"DE-BW\"\n",
+    "stateId= 3060\n",
+    "results = [] \n",
+    "results.append((\"stateISO\", \"stateId\", \"day\"))\n",
     "\n",
     "\n",
     "url = 'https://www.feiertagskalender.ch/ferien.php?geo=3060&jahr=2023&klasse=0&hl=en'\n",
@@ -141,14 +136,23 @@
     "for row in rows:\n",
     "    cell = row.find_all('td')\n",
     "    if(cell):\n",
-    "        print(cell[0].text, cell[2].text, cell[3].text)\n",
     "        start_date = datetime.strptime(cell[0].text, '%d.%m.%Y').date()\n",
     "        end_date = datetime.strptime(cell[3].text, '%d.%m.%Y').date()\n",
     "        delta = end_date - start_date\n",
     "        for i in range(delta.days + 1):\n",
     "            day = start_date + timedelta(days=i)\n",
-    "            print(day)\n",
-    "        print('------------------')\n"
+    "            results.append((stateISO, stateId, day))\n",
+    "\n",
+    "# df = pd.DataFrame({'Names': results})\n",
+    "# df.to_csv('2023.csv', index=False, encoding='utf-8')\n",
+    "\n",
+    "for i in results:\n",
+    "    print(i)\n",
+    "    \n",
+    "with open(\"test.csv\", \"wt\") as fp:\n",
+    "    writer = csv.writer(fp, delimiter=\",\")\n",
+    "    # writer.writerow([\"your\", \"header\", \"foo\"])  # write header\n",
+    "    writer.writerows(results)"
    ]
   },
   {
