--- a/test.ipynb
+++ b/test.ipynb
@@ -2,116 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('DE-BW', 3060, datetime.date(2022, 12, 21))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 22))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 23))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 24))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 25))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 26))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 27))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 28))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 29))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 30))\n",
-      "('DE-BW', 3060, datetime.date(2022, 12, 31))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 1))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 2))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 3))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 4))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 5))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 6))\n",
-      "('DE-BW', 3060, datetime.date(2023, 1, 7))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 6))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 7))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 8))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 9))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 10))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 11))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 12))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 13))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 14))\n",
-      "('DE-BW', 3060, datetime.date(2023, 4, 15))\n",
-      "('DE-BW', 3060, datetime.date(2023, 5, 30))\n",
-      "('DE-BW', 3060, datetime.date(2023, 5, 31))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 1))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 2))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 3))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 4))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 5))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 6))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 7))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 8))\n",
-      "('DE-BW', 3060, datetime.date(2023, 6, 9))\n",
-      "('DE-BW', 3060, datetime.date(2023, 7, 27))\n",
-      "('DE-BW', 3060, datetime.date(2023, 7, 28))\n",
-      "('DE-BW', 3060, datetime.date(2023, 7, 29))\n",
-      "('DE-BW', 3060, datetime.date(2023, 7, 30))\n",
-      "('DE-BW', 3060, datetime.date(2023, 7, 31))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 1))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 2))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 3))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 4))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 5))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 6))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 7))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 8))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 9))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 10))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 11))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 12))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 13))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 14))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 15))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 16))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 17))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 18))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 19))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 20))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 21))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 22))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 23))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 24))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 25))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 26))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 27))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 28))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 29))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 30))\n",
-      "('DE-BW', 3060, datetime.date(2023, 8, 31))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 1))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 2))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 3))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 4))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 5))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 6))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 7))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 8))\n",
-      "('DE-BW', 3060, datetime.date(2023, 9, 9))\n",
-      "('DE-BW', 3060, datetime.date(2023, 10, 30))\n",
-      "('DE-BW', 3060, datetime.date(2023, 10, 31))\n",
-      "('DE-BW', 3060, datetime.date(2023, 11, 1))\n",
-      "('DE-BW', 3060, datetime.date(2023, 11, 2))\n",
-      "('DE-BW', 3060, datetime.date(2023, 11, 3))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 23))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 24))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 25))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 26))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 27))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 28))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 29))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 30))\n",
-      "('DE-BW', 3060, datetime.date(2023, 12, 31))\n",
-      "('DE-BW', 3060, datetime.date(2024, 1, 1))\n",
-      "('DE-BW', 3060, datetime.date(2024, 1, 2))\n",
-      "('DE-BW', 3060, datetime.date(2024, 1, 3))\n",
-      "('DE-BW', 3060, datetime.date(2024, 1, 4))\n",
-      "('DE-BW', 3060, datetime.date(2024, 1, 5))\n"
+      "3060 DE-BW\n",
+      "3061 DE-BY\n",
+      "3062 DE-BE\n",
+      "3063 DE-BB\n",
+      "3064 DE-HB\n",
+      "3065 DE-HH\n",
+      "3066 DE-HE\n",
+      "3067 DE-MV\n",
+      "3068 DE-NI\n",
+      "3069 DE-NW\n",
+      "3070 DE-RP\n",
+      "3071 DE-SL\n",
+      "3072 DE-SN\n",
+      "3073 DE-ST\n",
+      "3074 DE-SH\n",
+      "3075 DE-TH\n"
      ]
     }
    ],
@@ -122,37 +35,61 @@
     "from bs4 import BeautifulSoup\n",
     "from datetime import date, timedelta, datetime\n",
     "\n",
-    "stateISO= \"DE-BW\"\n",
-    "stateId= 3060\n",
+    "states = [\n",
+    "    (\"DE-BW\", 3060),\n",
+    "    (\"DE-BY\", 3061),\n",
+    "    (\"DE-BE\", 3062),\n",
+    "    (\"DE-BB\", 3063),\n",
+    "    (\"DE-HB\", 3064),\n",
+    "    (\"DE-HH\", 3065),\n",
+    "    (\"DE-HE\", 3066),\n",
+    "    (\"DE-MV\", 3067),\n",
+    "    (\"DE-NI\", 3068),\n",
+    "    (\"DE-NW\", 3069),\n",
+    "    (\"DE-RP\", 3070),\n",
+    "    (\"DE-SL\", 3071),\n",
+    "    (\"DE-SN\", 3072),\n",
+    "    (\"DE-ST\", 3073),\n",
+    "    (\"DE-SH\", 3074),\n",
+    "    (\"DE-TH\", 3075)\n",
+    "]\n",
+    "\n",
     "results = [] \n",
-    "results.append((\"stateISO\", \"stateId\", \"day\"))\n",
+    "results.append((\"stateId\", \"stateISO\", \"day\"))\n",
     "\n",
     "\n",
-    "url = 'https://www.feiertagskalender.ch/ferien.php?geo=3060&jahr=2023&klasse=0&hl=en'\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "body = soup.find('table', {\"id\": \"school_vacancies\"} )\n",
-    "rows = body.find_all('tr')\n",
-    "for row in rows:\n",
-    "    cell = row.find_all('td')\n",
-    "    if(cell):\n",
-    "        start_date = datetime.strptime(cell[0].text, '%d.%m.%Y').date()\n",
-    "        end_date = datetime.strptime(cell[3].text, '%d.%m.%Y').date()\n",
-    "        delta = end_date - start_date\n",
-    "        for i in range(delta.days + 1):\n",
-    "            day = start_date + timedelta(days=i)\n",
-    "            results.append((stateISO, stateId, day))\n",
+    "def write_results(stateId, stateISO):\n",
+    "    url = f'https://www.feiertagskalender.ch/ferien.php?geo={stateId}&jahr=2023&klasse=0&hl=en'\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    body = soup.find('table', {\"id\": \"school_vacancies\"} )\n",
+    "    rows = body.find_all('tr')\n",
+    "    for row in rows:\n",
+    "        cell = row.find_all('td')\n",
+    "        if(cell):\n",
+    "            start_date = datetime.strptime(cell[0].text, '%d.%m.%Y').date()\n",
+    "            end_date = start_date\n",
+    "            if(cell[3].text):\n",
+    "                end_date = datetime.strptime(cell[3].text, '%d.%m.%Y').date()\n",
+    "            delta = end_date - start_date\n",
+    "            for i in range(delta.days + 1):\n",
+    "                day = start_date + timedelta(days=i)\n",
+    "                results.append((stateId, stateISO, day))\n",
     "\n",
-    "# df = pd.DataFrame({'Names': results})\n",
-    "# df.to_csv('2023.csv', index=False, encoding='utf-8')\n",
+    "    # df = pd.DataFrame({'Names': results})\n",
+    "    # df.to_csv('2023.csv', index=False, encoding='utf-8')\n",
     "\n",
-    "for i in results:\n",
-    "    print(i)\n",
-    "    \n",
-    "with open(\"test.csv\", \"wt\") as fp:\n",
-    "    writer = csv.writer(fp, delimiter=\",\")\n",
-    "    # writer.writerow([\"your\", \"header\", \"foo\"])  # write header\n",
-    "    writer.writerows(results)"
+    "    # for i in results:\n",
+    "    #     print(i)\n",
+    "        \n",
+    "    with open(\"test.csv\", \"wt\",newline='') as fp:\n",
+    "        writer = csv.writer(fp, delimiter=\",\")\n",
+    "        # writer.writerow([\"your\", \"header\", \"foo\"])  # write header\n",
+    "        writer.writerows(results)\n",
+    "\n",
+    "for state in states:\n",
+    "    print(state[1], state[0])\n",
+    "    write_results(state[1], state[0])"
    ]
   },
   {
